Added auto-generated swagger spring code
