# spring-server-generated/src/main/java/io/swagger/api/BrowsersApi.java
@@ -1,0 +1,38 @@
+/**
+ * NOTE: This class is auto generated by the swagger code generator program (3.0.2).
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+package io.swagger.api;
+
+import io.swagger.model.Browser;
+import io.swagger.annotations.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2018-11-12T11:58:42.466Z[GMT]")
+
+@Api(value = "browsers", description = "the browsers API")
+public interface BrowsersApi {
+
+    @ApiOperation(value = "Get supperted browsers", nickname = "getSupportedBrowsers", notes = "", response = Browser.class, responseContainer = "List", tags={ "main", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 201, message = "Success", response = Browser.class, responseContainer = "List") })
+    @RequestMapping(value = "/browsers",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    ResponseEntity<List<Browser>> getSupportedBrowsers();
+
+}
